<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AddItemFragment"
    android:orientation="vertical"
    android:background="#E0E0E0"
    android:padding="20dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_and_add_stock"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginBottom="32dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:padding="16dp"
        android:elevation="4dp" />


    <Space
        android:layout_width="wrap_content"
        android:layout_height="100dp"/>



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/circle"
        android:hint="@string/for_example_tsla"
        android:id="@+id/itemTitle"
        android:gravity="center"
        android:maxLines="1"
        android:layout_gravity="center"
        android:maxLength="5"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#808080"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />

    <Space
        android:layout_width="0dp"
        android:layout_height="25dp"/>


    <Space
        android:layout_width="0dp"
        android:layout_height="25dp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/finish_btn"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />


    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />


</LinearLayout>
